# road-topology

./: .gitignore  ML_EXPLAINED.md  README.md  pyproject.toml  requirements.txt
configs/: cvat.yaml  default.yaml  detection.yaml  sam.yaml  segmentation.yaml  tracking.yaml  training.yaml
docs/: USER_MANUAL.md  USER_MANUAL_KO.md
results/benchmark/: benchmark_log.txt  benchmark_results.json
results/benchmark_tsp6k/: benchmark_log.txt  tsp6k_benchmark_results.json
results/comparison/: README.md  SUMMARY_REPORT.md  create_comparison.py
results/eda_output_dir3/: object_heatmap.npy  quality_report.md  statistics.json
results/method1_color/: REPORT.md  WORKER_COMPLETE  segment_color.py
results/method2_edge/: RESULTS_SUMMARY.md  detect_lanes.py
results/method3_segformer/: README.md  segment_segformer.py
results/method4_sam/: .WORKER_COMPLETE  README.md  WORKER_4_SUMMARY.md  completion_status.json  segment_sam.py
results/method5_deeplab/: 01CT000000123_pred.npy  01CT000000134_pred.npy  01CT000000137_pred.npy  01CT000000161_pred.npy  01CT000000164_pred.npy  01CT000000166_pred.npy  01CT000000173_pred.npy  01CT000000178_pred.npy  01CT000000180_pred.npy  01CT000000192_pred.npy  README.md  WORKER_COMPLETE.md  segment_deeplab.py
scripts/: CLASS_MAPPINGS.md  QUICKSTART.md  README.md  benchmark_models.py  benchmark_tsp6k.py  download_datasets.py  download_models.py  download_tusimple.py  eda_cctv_road.py  generate_test_fixtures.py  test_dataset_loading.py
src/road_topology/: __init__.py
src/road_topology.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/road_topology/cli/: __init__.py  evaluate.py  infer.py  main.py  pseudolabel.py  train.py
src/road_topology/core/: __init__.py  config.py  device.py  exceptions.py  logging.py  types.py
src/road_topology/detection/: __init__.py  detector.py  models.py  utils.py
src/road_topology/evaluation/: __init__.py  metrics.py  visualize.py
src/road_topology/foundation/: __init__.py  ensemble.py  prompts.py  sam.py
src/road_topology/inference/: __init__.py  predictor.py  predictor_lane.py  video_processor.py
src/road_topology/pseudolabel/: __init__.py  confidence.py  generator.py  mask_builder.py  refinement.py
src/road_topology/segmentation/: __init__.py  (+7 more)
tests/: conftest.py
tests/fixtures/: README.md
(+10 files in other folders)
